# ss22-motion-primitive-freddy

./: .gitignore  .gitmodules  CMakeLists.txt  EthercatCommunication.c  Meeting_notes.md  README.md  history_commands.txt  kelo_robile_example_us5.c  plot.py  state_diagram.drawio
deliverables/deliverables_1/: SDP deliverables 1.docx  robile_alignment.odp  robot_ramp_distance.odp
deliverables/deliverables_1/overleaf_files/: Reference.bib
deliverables/deliverables_2/FINAL_presentation/Misc/: SDP_Presentation_2_slide_0.odg
deliverables/deliverables_3/robif2b/src/example/: CMakeLists.txt  kelo_robile_example_2.c  kelo_robile_example_us3.c
deliverables/deliverables_3/robif2b/src/nbx/ethercat/: CMakeLists.txt
deliverables_1/: freddy_aslignment.odp  robile_alignment.odp  robile_alignment.tif
deliverables_1/overleaf_files/: hbrs-example.tex
deliverables_3/robif2b/src/example/: align.c  kelo_robile_example.c  kelo_robile_example_bug2_fix_us2.c  kelo_robile_example_us2.c  kelo_robile_example_us3 copy.c  run.c
deliverables_3/robif2b/src/nbx/kelo/: kelo_drive.c
include/: base_aligment.h  behaviour_connection.h  robif2b_state.h  state_machine.h  wheel_aligment.h
literature_review/: abag.c
log/: us4_log03.txt
misc/: EthercatCommunication.c  joystick  joystick.c
robif2b/src/example/: CMakeLists.txt  kelo_robile_example.c  kelo_robile_example_PID_code.c  kelo_robile_example_bug2_fix_us2.c  kelo_robile_example_initial_version.c  kelo_robile_example_us2.c
src/: base_aligement.c  behaviour_connection.C  kelo_robile_PID.c  kelo_robile_example_us1.c  kelo_robile_example_us1_act_whl.c  kelo_robile_example_us2.c  kelo_robile_example_us3.c  kelo_robile_example_us3_hw_issue.c  kelo_robile_example_us4.c  kelo_robile_example_us4_act_whl.c  kelo_robile_example_us5.c  kelo_robile_example_us5_bk.c  main.c  ramp.c  wheel_aligement.c
utils/: plot.py  ramp_log.csv
